# raif-bootcamp-2023

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.bot  README.md  docker-compose.yml  fly.api.toml  fly.bot.toml  fly.toml  pyproject.toml
.github/workflows/: fly-bot.yml  fly.yml
models/2/: lgb_new.pkl
notebooks/: Feature_generation.ipynb  Parsing.ipynb  Train_on_MobileNet_features.ipynb  nn_lgbm.ipynb
painting_estimation/: load_test.py  models.py  settings.py
painting_estimation/api/: client.py  main.py  metrics.py
painting_estimation/bot/: bot.py  fly.toml  main.py
painting_estimation/data/models/1/: lgb.pkl
painting_estimation/images/: insertion.py  preprocessing.py  utils.py
painting_estimation/inference/: inference.py  onnx_inference.py  serving.py
painting_estimation/model/: dummy_model.py  effnet2_model.py  effnet_model.py  inception_model.py
painting_estimation/tests/: test_models.py
tests/: conftest.py  test_api.py  test_insertion.py  test_preproc.py  test_serving.py
