[tool.poetry]
name = "painting_estimation"
version = "0.1.0"
description = "ML service for painting value estimation"
authors = ["RBRU team #3"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.0"
matplotlib = "^3.0"
seaborn = "^0.12"
ipywidgets = "^8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
coverage = "^7.0"
mypy = "^1.0"
pylint = "^2.15.6"

[tool.poetry.group.format.dependencies]
black = "^22.8.0"
autoflake ="^1.4"
docformatter ="^1.4"
isort ="^5.10.1"
pyupgrade ="^2.32.1"
pybetter ="^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
pretty = true
ignore_missing_imports = true
namespace_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas", "pytz", "dateutil", "toml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov-report=term-missing",
    "--cov-report=xml:./coverage.xml",
    "--cov=./painting_estimation",
]

[tool.pylint]
    [tool.pylint.master]
    fail-under = 9
    good-names-rgxs="^[_a-z][_a-z0-9]?$"
    extension-pkg-whitelist = ["math", "numpy"]
    [tool.pylint."FORMAT"]
    max-line-length = 120

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before = ['STDLIB', 'LOCALFOLDER']
known_third_party = []
multi_line_output = 3
lines_after_imports = 2

[tool.docformatter]
wrap-summaries=120
wrap-descriptions=120
